add sentry system; improve AI prompt system; amongst others;
